log/build_2023-05-06_18-49-55/whisper_realtime_pub/stderr.log
  File "/home/allen/Documents/PyCharm/Projects/whisper_realtime_ws/install/whisper_realtime_pub/lib/python3.8/site-packages/whisper_realtime_pub/teleop_realtime_pub.py", line 6
    import
          ^
SyntaxError: invalid syntax

